footer fix on mobile

--- a/app/assets/css/footer.css
+++ b/app/assets/css/footer.css
@@ -13,12 +13,7 @@
     z-index: 1;
 }
 
-@media screen and (max-width: 600px) {
 
-    .footer{
-        margin-bottom: 20px;
-    }
-}
 
 
 .bottom-content {
